# aivika-experiment-entity

./: LICENSE  aivika-experiment-entity.cabal  aivikasim-experiment-entity.cabal
Simulation/Aivika/Experiment/: Entity.hs
Simulation/Aivika/Experiment/Entity/: ExperimentAgent.hs  ExperimentAggregator.hs  Types.hs  UUID.hs  Utils.hs
