name:            aivika-experiment-entity
version:         0.5
synopsis:        Entities of Aivika simulation experiments
description:
    It defines the entities of simulation experiments.
    .
category:        Simulation
license:         AllRightsReserved
license-file:    LICENSE
copyright:       (c) 2017. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://www.aivikasoft.com
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC == 8.0.2

library

    exposed-modules: Simulation.Aivika.Experiment.Entity
                     Simulation.Aivika.Experiment.Entity.ExperimentAgent
                     Simulation.Aivika.Experiment.Entity.ExperimentAggregator
                     Simulation.Aivika.Experiment.Entity.Types
                     Simulation.Aivika.Experiment.Entity.Utils
                     Simulation.Aivika.Experiment.Entity.UUID

    build-depends:   base >= 3 && < 6,
                     mtl >= 2.1.1,
                     stm >= 2.4.2,
                     containers >= 0.4.0.0,
                     deepseq >= 1.1.0.0,
                     binary >= 0.6.4.0,
                     random >= 1.0.0.3,
                     aivika >= 5.5

    extensions:      DeriveGeneric,
                     DeriveDataTypeable

    ghc-options:     -O2

source-repository head

    type:     git
    location: https://github.com/dsorokin/aivika-experiment-entity
