name:            aivikasim-experiment-entity
version:         0.1
synopsis:        Entities of AivikaSim simulation experiments
description:
    It defines the entities of simulation experiments.
    .
category:        Simulation
license:         AllRightsReserved
license-file:    LICENSE
copyright:       (c) 2017. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://www.aivikasoft.com/en/products/aivikasim.html
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC == 8.0.2

library

    exposed-modules: Simulation.Aivika.Experiment.Entity
                     Simulation.Aivika.Experiment.Entity.ExperimentAgent
                     Simulation.Aivika.Experiment.Entity.Types

    build-depends:   base >= 3 && < 6,
                     aivikasim >= 1.0

    ghc-options:     -O2

source-repository head

    type:     git
    location: https://github.com/dsorokin/aivikasim-experiment-data
